--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,6 @@
-<h5>Create component with CLI: ng generate component components/Users --spec=false</h5>
-<h1>Angular App</h1>
+<!-- <h5>Create component with CLI: ng generate component components/Users --spec=false</h5> -->
 <!-- <app-user></app-user> -->
-<app-users></app-users>
+<app-navbar></app-navbar>
+<div class="container">
+    <app-users></app-users>
+</div>
