--- a/src/app/components/users/users.component.html
+++ b/src/app/components/users/users.component.html
@@ -5,8 +5,8 @@
 <ul class="list-unstyled" *ngIf="loaded && users.length > 0">
     <li class="card card-body mb-2" *ngFor="let user of users" [class.bg-light]="user.isActive">
         <div>
-            <h3>{{ user.firstName }} {{ user.lastName }}</h3>
-            <ul class="list-group" *ngIf="showExtended">
+            <h3>{{ user.firstName }} {{ user.lastName }} <small><button (click)="toggleHide(user)" class="btn btn-dark btn-sm">Toggle</button></small></h3>
+            <ul class="list-group" *ngIf="!user.hide">
                 <li class="list-group-item">Age: {{user.age}}</li>
                 <li class="list-group-item">Address: {{user.address.street}} {{user.address.city}}, {{user.address.state}}</li>
             
