--- a/src/app/components/users/users.component.html
+++ b/src/app/components/users/users.component.html
@@ -1,6 +1,19 @@
-<h2>Users</h2>
+<button (click)="showUserForm = !showUserForm" class="btn btn-dark mb-3">Add User</button>
 
-<button (click)="addUser()" [disabled]="!enableAdd" class="btn btn-block mb-3">Add New User</button>
+<div class="card card-body mb-3" *ngIf="!this.showUserForm">
+    <h2>Add User</h2>
+    <form (submit)="onSubmit($event)">
+        <div class="form-group">
+            <label>First Name: </label>
+            <input (keydown)="fireEvent($event)" type="text" class="form-control" name="firstName">
+        </div>
+        
+        <button [disabled]="!enableAdd" class="btn btn-block mb-3">Add New User</button>
+    </form>
+</div>
+
+<!-- <h2>Users</h2> -->
+
 
 <ul class="list-unstyled" *ngIf="loaded && users.length > 0">
     <li class="card card-body mb-2" *ngFor="let user of users" [class.bg-light]="user.isActive">
