--- a/src/app/components/users/users.component.html
+++ b/src/app/components/users/users.component.html
@@ -1,15 +1,42 @@
-<button (click)="showUserForm = !showUserForm" class="btn btn-dark mb-3">Add User</button>
+<button (click)="this.showUserForm = !this.showUserForm" class="btn btn-dark mb-3">Add User</button>
 
 <div class="card card-body mb-3" *ngIf="!this.showUserForm">
     <h2>Add User</h2>
+    
     <form (submit)="onSubmit($event)">
         <div class="form-group">
-            <label>First Name: </label>
-            <input (keydown)="fireEvent($event)" type="text" class="form-control" name="firstName">
+            <label>First Name</label>
+            <input (keydown)="this.fireEvent($event)" type="text" class="form-control" name="firstName" >
         </div>
-        
-        <button [disabled]="!enableAdd" class="btn btn-block mb-3">Add New User</button>
+
+        <div class="form-group">
+            <label>Last Name</label>
+            <input (keydown)="this.fireEvent($event)" type="text" class="form-control" name="lastName" >
+        </div>
+
+        <div class="form-group">
+            <label>Age</label>
+            <input (change)="this.fireEvent($event)" type="text" type="number" class="form-control" name="age">
+        </div>
+
+        <div class="form-group">
+            <label>Street Address</label>
+            <input (keydown)="this.fireEvent($event)" type="text" class="form-control" name="street">
+        </div>
+
+        <div class="form-group">
+            <label>City</label>
+            <input (keydown)="this.fireEvent($event)" type="text" class="form-control" name="city">
+        </div>
+
+        <div class="form-group">
+            <label>State</label>
+            <input (keydown)="this.fireEvent($event)" type="text" class="form-control" name="state">
+        </div>
+
+        <button [disabled]="!this.enableAdd" class="btn btn-block mb-3">Add New User</button>
     </form>
+
 </div>
 
 <!-- <h2>Users</h2> -->
