--- a/src/app/components/user/user.component.html
+++ b/src/app/components/user/user.component.html
@@ -1,5 +1,5 @@
 <h2>{{user.firstName}} {{user.lastName}}</h2>
 
 <ul>
-    <li>Address: {{ user.address.street}} {{ user.address.city}}, {{user.address.state}} </li>
+    <li>Address:  </li>
 </ul>
