--- a/src/app/components/users/users.component.html
+++ b/src/app/components/users/users.component.html
@@ -14,23 +14,8 @@
         </div>
 
         <div class="form-group">
-            <label>Age</label>
-            <input [(ngModel)]="user.age" type="text" type="number" class="form-control" name="age">
-        </div>
-
-        <div class="form-group">
-            <label>Street Address</label>
-            <input [(ngModel)]="user.address.street" type="text" class="form-control" name="street">
-        </div>
-
-        <div class="form-group">
-            <label>City</label>
-            <input [(ngModel)]="user.address.city" type="text" class="form-control" name="city">
-        </div>
-
-        <div class="form-group">
-            <label>State</label>
-            <input [(ngModel)]="user.address.state" type="text" class="form-control" name="state">
+            <label>Email</label>
+            <input [(ngModel)]="user.email" type="text" class="form-control" name="email">
         </div>
 
         <button [disabled]="user.firstName == '' || user.lastName == ''" class="btn btn-block mb-3">Add New User</button>
@@ -38,15 +23,12 @@
 
 </div>
 
-<!-- <h2>Users</h2> -->
-
-
 <ul class="list-unstyled" *ngIf="loaded && users.length > 0">
     <li class="card card-body mb-2" *ngFor="let user of users" [class.bg-light]="user.isActive">
         <div>
             <h3>
                 {{ user.firstName }} {{ user.lastName }} 
-                <small *ngIf="user.age && user.address">
+                <small *ngIf="user.email">
                     <button (click)="user.hide = !user.hide" class="btn btn-dark btn-sm">
                         <i [ngClass]="user.hide ? 'fa fa-plus': 'fa fa-minus'"></i>
                     </button>
@@ -54,9 +36,7 @@
             </h3>
             
             <ul class="list-group" *ngIf="!user.hide">
-                <li class="list-group-item">Age: {{user.age}}</li>
-                <li class="list-group-item">Address: {{user.address.street}} {{user.address.city}}, {{user.address.state}}</li>
-            
+                <li class="list-group-item">Email: {{user.email}}</li>
                 <li class="list-group-item">Joined: {{user.registered | date:"fullDate" }}</li>
             </ul>
         </div>
