--- a/src/app/components/users/users.component.html
+++ b/src/app/components/users/users.component.html
@@ -28,7 +28,7 @@
         <div>
             <h3>
                 {{ user.firstName }} {{ user.lastName }} 
-                <small *ngIf="user.email">
+                <small>
                     <button (click)="user.hide = !user.hide" class="btn btn-dark btn-sm">
                         <i [ngClass]="user.hide ? 'fa fa-plus': 'fa fa-minus'"></i>
                     </button>
