--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,6 @@
 <!-- <h5>Create component with CLI: ng generate component components/Users --spec=false</h5> -->
+<!-- <h5>Create services with CLI: ng g service services/my-service</h5> -->
+<!-- <h5>ng g service services/data --module=app.module</h5> -->
 <!-- <app-user></app-user> -->
 <app-navbar></app-navbar>
 <div class="container">
