--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,5 +4,6 @@
 <!-- <app-user></app-user> -->
 <app-navbar></app-navbar>
 <div class="container">
-    <app-users></app-users>
+    <!-- <app-users></app-users> -->
+    <app-posts></app-posts>
 </div>
