--- a/src/app/components/posts/posts.component.html
+++ b/src/app/components/posts/posts.component.html
@@ -1,9 +1,9 @@
-<app-post-form></app-post-form>
+<app-post-form (newPost)="onNewPost($event)"></app-post-form>
 
 <h2>Posts</h2>
 <div class="card mb-3" *ngFor="let post of posts">
     <div class="card-body">
-        <h5>{{ post.title }}</h5>
+        <h4>{{ post.title }}</h4>
         <p>{{ post.body }}</p>
     </div>
 </div>
