--- a/src/app/components/posts/posts.component.html
+++ b/src/app/components/posts/posts.component.html
@@ -1,9 +1,27 @@
-<app-post-form (newPost)="onNewPost($event)"></app-post-form>
+<app-post-form 
+    [currentPost]="currentPost" 
+    [isEdit]="isEdit"
+    (newPost)="onNewPost($event)">
+</app-post-form>
 
 <h2>Posts</h2>
 <div class="card mb-3" *ngFor="let post of posts">
     <div class="card-body">
         <h4>{{ post.title }}</h4>
         <p>{{ post.body }}</p>
+        <hr>
+
+        <button class="btn btn-danger">
+            <i class="fa fa-remove"></i>
+        </button>
+        
+        <button 
+            *ngIf="!isEdit"
+            (click)="editPost(post)" 
+            class="btn btn-success ml-2"
+        >
+            <i class="fa fa-pencil"></i>
+        </button>
+
     </div>
 </div>
