--- a/src/app/components/posts/posts.component.html
+++ b/src/app/components/posts/posts.component.html
@@ -2,6 +2,7 @@
     [currentPost]="currentPost" 
     [isEdit]="isEdit"
     (newPost)="onNewPost($event)">
+    (updatedPost)="onUpdatedPost($event)"
 </app-post-form>
 
 <h2>Posts</h2>
@@ -16,7 +17,6 @@
         </button>
         
         <button 
-            *ngIf="!isEdit"
             (click)="editPost(post)" 
             class="btn btn-success ml-2"
         >
