--- a/src/app/components/posts/posts.component.html
+++ b/src/app/components/posts/posts.component.html
@@ -12,7 +12,9 @@
         <p>{{ post.body }}</p>
         <hr>
 
-        <button class="btn btn-danger">
+        <button 
+            (click)="removePost(post)"
+            class="btn btn-danger">
             <i class="fa fa-remove"></i>
         </button>
         
