--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,4 +1,11 @@
 <h1>Welcome</h1>
 <p>This is the Angular Front to Back sandbox application</p>
-<button class="btn btn-secondary">Users Section</button>
-<button class="btn btn-dark ml-2">Posts Section</button>
+<button 
+    class="btn btn-secondary"
+    routerLink="/users"
+>Users Section</button>
+
+<button 
+    class="btn btn-dark ml-2"
+    routerLink="/posts"    
+>Posts Section</button>
