--- a/src/app/components/posts/posts.component.html
+++ b/src/app/components/posts/posts.component.html
@@ -8,7 +8,9 @@
 <h2>Posts</h2>
 <div class="card mb-3" *ngFor="let post of posts">
     <div class="card-body">
-        <h4>{{ post.title }}</h4>
+        <h4>
+            <a routerLink="/post/{{ post.id }}">{{ post.title }}</a>
+        </h4>
         <p>{{ post.body }}</p>
         <hr>
 
